# ColorMageRL

./: CMakeLists.txt  README.md  build.sh
glad/: glad.c  glad.h  where_to_get.txt
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: simple.instanced.vs
src/: CMakeLists.txt  animations.h  controller.h  display.cpp  display.h  gl_headers.h  io.cpp  io.h  level.cpp  level.h  log.h  main.cpp  object.cpp  object.h  object_factory.cpp  object_factory.h  scene_manager.h  state_machine.h  tools.cpp  types.h
src/ecs/: ecs.cpp  ecs.h
src/scenes/: dummy_scene.cpp  dummy_scene.h  gameover_scene.cpp  gameover_scene.h  scene_manager.cpp  scene_manager.h  title_scene.cpp  title_scene.h
web/: index.html
